packages/rust/holy/tests/fail/07-fuzz-enum.stderr
error: Fuzz macro only supports structs
 --> tests/fail/07-fuzz-enum.rs:4:1
  |
4 | / enum Nope {
5 | |     A,
6 | |     B,
7 | | }
  | |_^
